Add primary information

--- a/index.html
+++ b/index.html
@@ -17,13 +17,17 @@
               <div class="thirteen wide column">
                 <div class="stackable grid">
                   <div class="sixteen wide column">
-                    <!-- Name, job, contacts -->
+                    <h1>Dmytro Potapenko</h1>
+                      <p>Front-end developer <br>
+                      1lindern1@gmail.com <br>
+                      380938724352</p>
                   </div>
                   <div class="sixteen wide mobile only column">
                     <div class="divider"></div>
                   </div>
                   <div class="sixteen wide column">
-                    <!-- Intro -->
+                    <h2>Resume</h2>
+                    <p>A hard-working, creative, self-confident, enthusiastic, active, tolerant, far-sighted, organized, and a quick study. I attend a gym and have an active lifestyle, like boxing, swimming, and playing games.</p>
                   </div>
                 </div>
               </div>
