--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                   <div class="fake" onmouseover="PlaySound('mySound')" onmouseout="StopSound('mySound')"></div>
                   <audio id='mySound' src='./music/gta.mp3'></audio>
                 </div>
-                <p><strong>Hover&#128070;&#128526;</strong></p>
+                <p class="under-avatar"><strong>Hover&#128070;&#128526;</strong></p>
 
                 
                 <div class="chmode-wrapper">
