fix lost styles

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <title>Résumé</title>
-    <link rel="stylesheet" href="https://volodymyrkushnir.com/assets/stylesheets/base.css">
+    <link rel="stylesheet" href="./styles/imported.css">
     <link rel="stylesheet" href="./styles/main.css">
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"></script>    
     <script src="./js/music.js"></script>
